--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -11,6 +11,17 @@
     </head>
     <body>
         <h1>Welcome, to your Dashboard!</h1>
+        <h2>User Information</h2>
+        <p>Name: <span id="username"></span></p>
+        <p>Level: <span id="userlevel"></span></p>
+        <p>Experience: <span id="userexp"></span></p>
+
+        <h2>Enter Training Time</h2>
+        <form id="trainingForm">
+            <label for="trainingForm">Training Time</label>
+            <input type="number" id="trainingTime" name="trainingTime" required>
+            <button type="submit">Submit</button>
+        </form>
 
         
         <script src="" async defer></script>
