--- a/public/createAccount.html
+++ b/public/createAccount.html
@@ -10,7 +10,7 @@
         <link rel="stylesheet" href="">
     </head>
     <body>
-        <form action="/create-account" method="POST">
+        <form action="/createAccount" method="POST">
             <label for="username">Username:</label>
             <input type="text" id="username" name="username" required>
 
