--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -17,9 +17,9 @@
         <p>Experience: <span id="userexp"></span></p>
 
         <h2>Enter Training Time</h2>
-        <form id="trainingForm">
+        <form action="/userLevel" id="Time">
             <label for="trainingForm">Training Time</label>
-            <input type="number" id="trainingTime" name="trainingTime" required>
+            <input type="number" id="Time" name="trainingTime" required>
             <button type="submit">Submit</button>
         </form>
 
